Run linter, fix problems

--- a/.eslintrc
+++ b/.eslintrc
@@ -47,13 +47,21 @@
     "globals": {
         "_": true,
         "Game": true,
+        "ATTACK": true,
+        "HEAL": true,
+        "TOUGH": true,
+        "RANGED_ATTACK": true,
         "ERR_NOT_IN_RANGE": true,
         "RESOURCE_ENERGY": true,
         "FIND_STRUCTURES": true,
+        "FIND_CREEPS": true,
+        "FIND_DROPPED_RESOURCES": true,
         "STRUCTURE_EXTENSION": true,
         "STRUCTURE_SPAWN": true,
         "STRUCTURE_TOWER": true,
         "STRUCTURE_CONTAINER": true,
+        "STRUCTURE_RAMPART": true,
+        "STRUCTURE_STORAGE": true,
         "FIND_SOURCES": true,
         "ERR_BUSY": true,
         "FIND_HOSTILE_CREEPS": true,
