--- a/.eslintrc
+++ b/.eslintrc
@@ -47,6 +47,7 @@
     "globals": {
         "_": true,
         "Game": true,
+        "OK": true,
         "ATTACK": true,
         "HEAL": true,
         "TOUGH": true,
@@ -55,6 +56,7 @@
         "RESOURCE_ENERGY": true,
         "FIND_STRUCTURES": true,
         "FIND_CREEPS": true,
+        "FIND_MY_CREEPS": true,
         "FIND_DROPPED_RESOURCES": true,
         "STRUCTURE_EXTENSION": true,
         "STRUCTURE_SPAWN": true,
